examples/good/void.ypl
even(a): {
    if (a % 2 == 0): {
        out("even");
        return;
    }
    out("odd");
}

main(): {
    even(2);
    even(3);
}
