examples/bad/and.ypl
main(): {
    a = 2 * 3;
    if (1 && a == 6):
        out("worked");
}